--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-/app/google-services.json
+/app/goog
+le-services.json
 .DS_Store
 /build
 /captures
